# innertext

./: .gitignore  Cargo.toml  LICENSE.md  MAINTENANCE.md  PUBLISHING.md  README.md  SETUP_RELEASE.md  ci.sh
.github/workflows/: publish-npm.yml  publish-pypi.yml  test.yml
bindings/innertext-java/: Cargo.toml  README.md  build.gradle
bindings/innertext-java/java/com/innertext/: InnerText.java
bindings/innertext-java/src/: lib.rs
bindings/innertext-node/: Cargo.toml  README.md  index.d.ts  index.js  innertext-0.2.3.tgz  package.json
bindings/innertext-node/src/: lib.rs
bindings/innertext-python/: Cargo.toml  README.md  pyproject.toml
bindings/innertext-python/python/: innertext.pyi
bindings/innertext-python/python/innertext/: __init__.py
bindings/innertext-python/src/: lib.rs
crates/innertext-core/: Cargo.toml
crates/innertext-core/src/: css.rs  inner_text.rs  lib.rs  model.rs  render.rs  text_content.rs
crates/innertext-core/tests/: bdd.rs  chromium_parity.rs  spec_behavior.rs
scripts/: sync-version.py
spec/: whatwg.gherkin  whatwg.txt
src/: main.rs
tools/browser-oracle/: corpus.json  oracle.mjs  package.json
