[package]
name = "innertext-node"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
innertext-core = { path = "../../crates/innertext-core" }
napi = { version = "2.16", default-features = false, features = ["napi8"] }
napi-derive = "2.16"
