[package]
name = "innertext-python"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "innertext"
crate-type = ["cdylib"]

[dependencies]
innertext-core = { path = "../../crates/innertext-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
