[build-system]
requires = ["maturin>=0.15"]
build-backend = "maturin"

[project]
name = "innertext"
version = "0.2.2"
description = "Pure Rust WHATWG-compliant innerText, outerText, and textContent extraction"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Josh Fayer", email = "josh@example.com" }
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Repository = "https://github.com/joshfayer/innertext"
Homepage = "https://github.com/joshfayer/innertext"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py37"]
python-source = "python"
module-name = "innertext._innertext"
