[package]
name = "innertext-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "innertext_core"
path = "src/lib.rs"

[dependencies]
html5ever.workspace = true
markup5ever_rcdom.workspace = true
markup5ever.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cucumber = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false
